[package]
name = "lora-phy-embedded-linux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rppal = { git = "https://github.com/golemparts/rppal.git", features = [
    "hal",
], rev = "c237b481bf763f76b10328dfbd4edf543e9907f6" }
lora-phy = { git = "https://github.com/lora-rs/lora-rs.git", rev = "d86786988a4a446963d1e85e3ab99a225734cedd" }
embedded-hal = { version = "=1.0.0-rc.2" }
embedded-hal-async = { version = "=1.0.0-rc.2" }
