[package]
name = "lora-phy-embedded-linux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rppal = { path = "../rppal", features = ["hal", "hal-unproven"] }
lora-phy = { git = "https://github.com/lora-rs/lora-rs.git", rev = "d86786988a4a446963d1e85e3ab99a225734cedd" }
embedded-hal = { version = "=1.0.0-rc.2" }
embedded-hal-async = { version = "=1.0.0-rc.2" }
embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = [
    "unproven",
] }
tokio = { version = "1", features = ["full"] }
embedded-hal-bus = { version = "0.1.0-rc.2", features = ["async", "std"] }
